<resources>
    <string name="app_name">Car Monitoring POC</string>
    <string name="home">Car Info</string>
    <string name="settings">Settings</string>
    <string name="reload">Reload</string>
    <string name="general">Miscellaneous</string>
    <string name="key_add_device">key_add_device</string>
    <string name="add_new_bluetooth_device">Configure bluetooth device</string>
    <string name="key_mock">key_mock</string>
    <string name="mock_setting">Mock values</string>
    <string name="obd_settings">OBD settings</string>
    <string name="permission_error">Bluetooth permissions are needed to configure the device!</string>
    <string name="no_bluetooth_support">Bluetooth is not support by this device!</string>
    <string name="configure_bluetooth_device">Configure device</string>
    <string name="preferred_device_set">Preferred device set!</string>
    <string name="gps_position">GPS: %1$s </string>
    <string name="bluetooth_status">Bluetooth device: %1$s </string>
    <string name="rpm_text">RPM: %1$s </string>
    <string name="throttle_text">Throttle: %1$s </string>
    <string name="air_text">AirFlow: %1$s </string>
    <string name="engine_temp_text">Engine temperature: %1$s </string>
    <string name="speed_text">Speed: %1$s </string>
    <string name="error">Error</string>
    <string name="not_connected">Not connected</string>
    <string name="no_devices">No compatible devices found</string>
    <string name="key_timeout">key_obd_timeout</string>
    <string name="obd_timeout">Timeout</string>
    <string name="apache_edgent">Apache Edgent</string>
    <string name="organization">Organization</string>
    <string name="token">Token</string>
    <string name="identifier">Identifier</string>
    <string name="key_identifier">key_identifier</string>
    <string name="key_organization">key_organization</string>
    <string name="key_token">key_token</string>
</resources>
